// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText renders 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0696D7;
  outline: none;
}

.emotion-0 a:hover {
  color: #0671A1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
}

.emotion-0 a:focus {
  color: #024B6C;
  outline: solid 0 rgba(6,150,215,0.25);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
  dangerouslySetInnerHTML={undefined}
/>
`;

exports[`RichText renders with children 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0696D7;
  outline: none;
}

.emotion-0 a:hover {
  color: #0671A1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
}

.emotion-0 a:focus {
  color: #024B6C;
  outline: solid 0 rgba(6,150,215,0.25);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
>
  <h1>
    Happy little clouds
  </h1>
</div>
`;

exports[`RichText renders with dangerouslySetInnerHTML 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0696D7;
  outline: none;
}

.emotion-0 a:hover {
  color: #0671A1;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
}

.emotion-0 a:focus {
  color: #024B6C;
  outline: solid 0 rgba(6,150,215,0.25);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Nice little fluffy clouds laying around in the sky being lazy.</p>",
    }
  }
/>
`;
